[package]
name = "desub-current"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/desub/"
description = "Decode Substrate with Backwards-Compatible Metadata"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0.30"
frame-metadata = { git = "https://github.com/nathanwhit/frame-metadata", branch = "insipx-aj-docs-rebase", features = [
    "v14",
    "std",
    "scale-info",
] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
codec = { version = "3.1", package = "parity-scale-codec", features = [
    "bit-vec",
] }
hex = "0.4.3"
derive_more = "0.99.16"
scale-info = { version = "2.0.0", features = ["bit-vec", "derive"] }
bitvec = { version = "1.0", features = ["serde", "alloc"] }
desub-common = { version = "0.1.0", path = "../desub-common" }

sp-core = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-runtime = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }

[dev-dependencies]
serde_json = "1"
sp-keyring = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }

[features]
