[package]
name = "desub-legacy"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/desub/"
description = "Decode Substrate with Backwards-Compatible Metadata"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0.30"
codec = { version = "3.1", package = "parity-scale-codec", features = [
    "bit-vec",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
onig = { version = "5.0", default-features = false }
derive_more = "0.99.3"
dyn-clone = "1.0"
hex = "0.4"
bitvec = { version = "1.0", features = ["serde", "alloc"] }
frame-metadata = { git = "https://github.com/nathanwhit/frame-metadata", branch = "insipx-aj-docs-rebase", features = [
    "legacy",
] }

desub-common = { version = "0.1.0", path = "../desub-common/" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
sp-version = { git = "https://github.com/paritytech/substrate", branch = "master" }
pretty_env_logger = "0.4"
hex = "0.4"
