[package]
name = "desub"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/desub/"
description = "Decode Substrate with Backwards-Compatible Metadata"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

desub-legacy = { version = "0.1.0", path = "../desub-legacy/" }
desub-common = { version = "0.1.0", path = "../desub-common/" }
desub-current = { version = "0.1.0", path = "../desub-current/" }
desub-json-resolver = { version = "0.0.1", path = "../desub-json-resolver/", optional = true }

thiserror = "1.0.30"
codec = { version = "3.1.0", package = "parity-scale-codec" }
frame-metadata = { git = "https://github.com/nathanwhit/frame-metadata", branch = "insipx-aj-docs-rebase" }
serde = { version = "1", features = ["derive"] }


[features]
polkadot-js = [
    "desub-json-resolver",
    "desub-json-resolver/polkadot",
    "frame-metadata/legacy",
]
